# RatStrokeSegmentation

./: README.md  deep_learning.py
PyQT/: eval.py  gui.py  requirements.txt
PyQT/data/threshold/: 2dseq_W4-04_T2H0.nii
PyQT/doc/: Par0026rigid.txt
PyQT/lib/: Elastix.py  ROI.py  adc_segmentation.py  filesfinder.py  mpc_segmentaion.py  normalization_mean.py  normalization_th.py  slice.py  visualize.py
doc/: Par0020affine.txt  Par0020bspline2.txt  Par0020rigid.txt  Par0026affine.txt  TG-ParamAMMIbsplineMRI.txt
lib/: Transformix.py  maskVolume.py  normalization.py  registration.py
ratSS/: CMakeLists.txt
ratSS/ratbrainseg/: CMakeLists.txt  ratbrainseg.py
ratSS/ratbrainseg/Resources/UI/: ratbrainseg.ui
ratSS/ratbrainseg/data/threshold/: HemisphereMask-W4-04.mha  Segmentation_W4-04.mha
ratSS/ratbrainseg/lib/: util.py
ratSS/ratbrainseg/lib/doc/: Par0020affine.txt  Par0020rigid.txt  Par0026affine.txt  Par0026bspline.txt  Par0026rigid.txt  TG-ParamAMMIbsplineMRI.txt  TG-ParamNMIrigidMRI.txt
ratSS/ratbrainseg/lib/tmp/: A_1.nii  B_2.nii  C_3.nii  D_4.nii  E_5.nii  F_6.nii  G_7.nii  H_8.nii  I_9.nii  J_10.nii  K_11.nii  L_12.nii  M_13.nii  N_14.nii  O_15.nii
